--- a/babybuddy/static_src/fontello/css/babybuddy.css
+++ b/babybuddy/static_src/fontello/css/babybuddy.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'babybuddy';
-  src: url('../font/babybuddy.eot?22684922');
-  src: url('../font/babybuddy.eot?22684922#iefix') format('embedded-opentype'),
-       url('../font/babybuddy.woff2?22684922') format('woff2'),
-       url('../font/babybuddy.woff?22684922') format('woff'),
-       url('../font/babybuddy.ttf?22684922') format('truetype'),
-       url('../font/babybuddy.svg?22684922#babybuddy') format('svg');
+  src: url('../font/babybuddy.eot?72731680');
+  src: url('../font/babybuddy.eot?72731680#iefix') format('embedded-opentype'),
+       url('../font/babybuddy.woff2?72731680') format('woff2'),
+       url('../font/babybuddy.woff?72731680') format('woff'),
+       url('../font/babybuddy.ttf?72731680') format('truetype'),
+       url('../font/babybuddy.svg?72731680#babybuddy') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'babybuddy';
-    src: url('../font/babybuddy.svg?22684922#babybuddy') format('svg');
+    src: url('../font/babybuddy.svg?72731680#babybuddy') format('svg');
   }
 }
 */
@@ -69,6 +69,11 @@
 .icon-true:before { content: '\e80c'; } /* '' */
 .icon-update:before { content: '\e80d'; } /* '' */
 .icon-user:before { content: '\e80e'; } /* '' */
+.icon-clock:before { content: '\e80f'; } /* '' */
+.icon-calendar:before { content: '\e810'; } /* '' */
+.icon-arrow-up:before { content: '\e811'; } /* '' */
+.icon-arrow-down:before { content: '\e812'; } /* '' */
+.icon-cancel:before { content: '\e813'; } /* '' */
 .icon-dashboard:before { content: '\f0e4'; } /* '' */
 .icon-tummytime:before { content: '\f118'; } /* '' */
 .icon-sad:before { content: '\f119'; } /* '' */
@@ -83,4 +88,5 @@
 .icon-sleep:before { content: '\f236'; } /* '' */
 .icon-note:before { content: '\f249'; } /* '' */
 .icon-weight:before { content: '\f24e'; } /* '' */
+.icon-today:before { content: '\f274'; } /* '' */
 .icon-temperature:before { content: '\f2c8'; } /* '' */
