--- a/babybuddy/templates/babybuddy/form_field.html
+++ b/babybuddy/templates/babybuddy/form_field.html
@@ -19,7 +19,7 @@
         </div>
     {% elif field|field_type == "datetimefield" or field|field_type == "datefield" %}
         <div class="input-group input-group-lg datetimepicker" id="datetimepicker_{{ field.name }}" data-target-input="nearest">
-            <div class="input-group-prepend" data-target="#datetimepicker_{{ field.name }}" data-toggle="datetimepicker">
+            <div class="input-group-prepend px-2 rounded-left bg-dark" data-target="#datetimepicker_{{ field.name }}" data-toggle="datetimepicker">
                 <span class="input-group-text"><i class="icon-calendar"></i></span>
             </div>
             {% if field.errors %}
