Hide child edit and delete buttons on small screens
Prevents weird spacing issues and line breaks between buttons on small phones.

Closes #298

--- a/dashboard/templates/dashboard/child_button_group.html
+++ b/dashboard/templates/dashboard/child_button_group.html
@@ -32,14 +32,14 @@
     </div>
 
     {% if perms.core.change_child %}
-        <a class="btn"
+        <a class="btn d-none d-md-inline-block"
            href="{% url 'core:child-update' object.slug %}"
            title="{% trans "Edit" %}"
            role="button"><i class="icon-update" aria-hidden="true"></i></a>
     {% endif %}
 
     {% if perms.core.delete_child %}
-        <a class="btn"
+        <a class="btn d-none d-md-inline-block"
            href="{% url 'core:child-delete' object.slug %}"
            title="{% trans "Delete" %}"
            role="button"><i class="icon-delete" aria-hidden="true"></i></a>
