Adding theme support

--- a/babybuddy/static_src/scss/babybuddy.scss
+++ b/babybuddy/static_src/scss/babybuddy.scss
@@ -1,6 +1,8 @@
 @import 'functions';
 @import 'variables';
 @import 'mixins';
+@import 'theme';
+
 @import '../../../node_modules/bootstrap/scss/bootstrap';
 @import '../../../node_modules/tempusdominus-bootstrap-4/src/sass/tempusdominus-bootstrap-4';
 
