--- a/babybuddy/static_src/scss/themes/dark/_theme.scss
+++ b/babybuddy/static_src/scss/themes/dark/_theme.scss
@@ -29,6 +29,14 @@ $theme-colors: (
 );
 
 
+.button-outline {
+    @extend .btn-outline-light;
+}
+
+nav {
+    @extend .bg-dark;
+}
+
 // Body
 //
 // Settings for the `<body>` element.
