--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -11,7 +11,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}{% endblock %} | Baby Buddy</title>
 
-    <link rel="stylesheet" href="{% static "babybuddy/css/app.css" %}" />
+    <link rel="stylesheet" href="{% static 'babybuddy/css/'|add:user.settings.theme|add:'.css' %}" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="{% static "babybuddy/root/apple-touch-icon.png" %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static "babybuddy/root/favicon-32x32.png" %}">
@@ -40,7 +40,6 @@
 {% endblock %}
 
 {% block page %}{% endblock %}
-
     <script src="{% static "babybuddy/js/vendor.js" %}"></script>
     <script>moment.locale('{{ LOCALE }}');</script>
     <script>moment.tz.setDefault('{{ TIMEZONE }}');</script>
