Add SVG favicon (WIP)
:ghost:

--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -13,18 +13,8 @@
 
     <link rel="stylesheet" href="{% static "babybuddy/css/app.css" %}" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static "babybuddy/root/apple-touch-icon.png" %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static "babybuddy/root/favicon-32x32.png" %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static "babybuddy/root/favicon-16x16.png" %}">
-    <link rel="manifest" href="{% static "babybuddy/root/site.webmanifest.json" %}">
-    <link rel="mask-icon" href="{% static "babybuddy/root/safari-pinned-tab.svg" %}" color="#226f97">
-    <meta name="apple-mobile-web-app-title" content="Baby Buddy">
-    <meta name="application-name" content="Baby Buddy">
-    <meta name="msapplication-TileColor" content="#226f97">
-    <meta name="theme-color" content="#ffffff">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="msapplication-starturl" content="/">
+    <link rel="icon" type="image/svg+xml" href="{% static "babybuddy/root/favicon.svg" %}">
+    <link rel="icon" type="image/png" href="{% static "babybuddy/root/favicon.png" %}">
 </head>
 <body style="padding-top: 3rem;">
 
