Add small white stroke to favicon

--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -13,8 +13,14 @@
 
     <link rel="stylesheet" href="{% static "babybuddy/css/app.css" %}" />
 
-    <link rel="icon" type="image/svg+xml" href="{% static "babybuddy/root/favicon.svg" %}">
-    <link rel="icon" type="image/png" href="{% static "babybuddy/root/favicon.png" %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static "babybuddy/root/apple-touch-icon.png" %}?v=20210920">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static "babybuddy/root/favicon-32x32.png" %}?v=20210920">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static "babybuddy/root/favicon-16x16.png" %}?v=20210920">
+    <link rel="manifest" href="{% static "babybuddy/root/site.webmanifest" %}?v=20210920">
+    <link rel="mask-icon" href="{% static "babybuddy/root/safari-pinned-tab.svg" %}?v=20210920" color="#226f97">
+    <link rel="shortcut icon" href="{% static "babybuddy/root/favicon.ico" %}?v=20210920">
+    <meta name="msapplication-TileColor" content="#37abe9">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body style="padding-top: 3rem;">
 
