Translate untranslated strings
Fixes #352

--- a/core/templates/timeline/_timeline.html
+++ b/core/templates/timeline/_timeline.html
@@ -35,17 +35,25 @@
                         {% endblocktrans %}
                         {% if object.duration %}
                             <div>
-                                <small>Duration: {{ object.duration }}</small>
+                                <small>
+                                    {% blocktrans trimmed with duration=object.duration %}
+                                        Duration: {{ duration }}
+                                    {% endblocktrans %}
+                                </small>
                             </div>
                         {% endif %}
                         {% if object.time_since_prev %}
                             <div>
-                                <small>{{ object.time_since_prev }} since previous</small>
+                                <small>
+                                    {% blocktrans trimmed with since=object.time_since_prev %}
+                                        {{ since }} since previous
+                                    {% endblocktrans %}
+                                </small>
                             </div>
                         {% endif %}
                         {% if object.edit_link %}
                             <div>
-                                <small><a href="{{ object.edit_link }}">Edit</a></small>
+                                <small><a href="{{ object.edit_link }}">{% trans "Edit" %}</a></small>
                             </div>
                         {% endif %}
                     </div>
@@ -69,5 +77,5 @@
         {% endif %}
     </h3>
 {% else %}
-    <div class="text-center">No events</div>
+    <div class="text-center">{% trans "No events" %}</div>
 {% endif %}
