--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -7,11 +7,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}{% endblock %} | Baby Buddy</title>
     <link rel="stylesheet" href="{% static "babybuddy/css/app.css" %}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static "babybuddy/root/apple-touch-icon.png" %}?v=20211218">
     <link rel="icon" type="image/svg+xml" href="{% static "babybuddy/root/favicon.svg" %}?v=20210925">
+    <link rel="manifest" href="{% static "babybuddy/root/site.webmanifest" %}?v=20211218">
+    <link rel="mask-icon" href="{% static "babybuddy/root/safari-pinned-tab.svg" %}?v=20211218" color="#37abe9">
+    <link rel="shortcut icon" href="{% static "babybuddy/root/favicon.ico" %}?v=20211218">
+    <meta name="apple-mobile-web-app-title" content="Baby Buddy">
+    <meta name="application-name" content="Baby Buddy">
+    <meta name="msapplication-TileColor" content="#37abe9">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body style="padding-top: 3rem;">
 
