--- a/babybuddy/templates/registration/base.html
+++ b/babybuddy/templates/registration/base.html
@@ -5,10 +5,10 @@
 
 {% block page %}
     <div id="view-{{ request.resolver_match.view_name }}" class="container">
-        <div class="text-center mb-4">
-            <h1 class="display-3 mb-3"><span class="text-info">Baby</span> Buddy</h1>
+        <div class="text-center">
+            <h1 class="display-4"><span class="text-primary">Baby</span> Buddy</h1>
         </div>
-        <div class="bg-light p-4 rounded text-dark">
+        <div class="p-4 rounded text-light">
             {% include 'babybuddy/messages.html' %}
             {% block content %}{% endblock %}
         </div>
