--- a/babybuddy/templates/registration/base.html
+++ b/babybuddy/templates/registration/base.html
@@ -5,8 +5,12 @@
 
 {% block page %}
     <div id="view-{{ request.resolver_match.view_name }}" class="container">
-        <div class="text-center">
-            <h1 class="display-4"><span class="text-primary">Baby</span> Buddy</h1>
+        <div class="text-center pt-3">
+            <img src="{% static "babybuddy/logo/icon-brand.png" %}" width="65" height="65" class="d-inline-block align-top" alt="">
+            <h1 class="d-none d-md-inline-block display-4 ml-2">
+                <span class="text-primary">Baby</span> Buddy
+            </h1>
+        </a>
         </div>
         <div class="p-4 rounded text-light">
             {% include 'babybuddy/messages.html' %}
