--- a/babybuddy/static_src/fontello/css/babybuddy.css
+++ b/babybuddy/static_src/fontello/css/babybuddy.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'babybuddy';
-  src: url('../font/babybuddy.eot?72731680');
-  src: url('../font/babybuddy.eot?72731680#iefix') format('embedded-opentype'),
-       url('../font/babybuddy.woff2?72731680') format('woff2'),
-       url('../font/babybuddy.woff?72731680') format('woff'),
-       url('../font/babybuddy.ttf?72731680') format('truetype'),
-       url('../font/babybuddy.svg?72731680#babybuddy') format('svg');
+  src: url('../font/babybuddy.eot?3615871');
+  src: url('../font/babybuddy.eot?3615871#iefix') format('embedded-opentype'),
+       url('../font/babybuddy.woff2?3615871') format('woff2'),
+       url('../font/babybuddy.woff?3615871') format('woff'),
+       url('../font/babybuddy.ttf?3615871') format('truetype'),
+       url('../font/babybuddy.svg?3615871#babybuddy') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'babybuddy';
-    src: url('../font/babybuddy.svg?72731680#babybuddy') format('svg');
+    src: url('../font/babybuddy.svg?3615871#babybuddy') format('svg');
   }
 }
 */
@@ -74,6 +74,9 @@
 .icon-arrow-up:before { content: '\e811'; } /* '' */
 .icon-arrow-down:before { content: '\e812'; } /* '' */
 .icon-cancel:before { content: '\e813'; } /* '' */
+.icon-head-circumference:before { content: '\e814'; } /* '' */
+.icon-measurements:before { content: '\e815'; } /* '' */
+.icon-height:before { content: '\f044'; } /* '' */
 .icon-dashboard:before { content: '\f0e4'; } /* '' */
 .icon-tummytime:before { content: '\f118'; } /* '' */
 .icon-sad:before { content: '\f119'; } /* '' */
@@ -89,4 +92,5 @@
 .icon-note:before { content: '\f249'; } /* '' */
 .icon-weight:before { content: '\f24e'; } /* '' */
 .icon-today:before { content: '\f274'; } /* '' */
+.icon-bmi:before { content: '\f295'; } /* '' */
 .icon-temperature:before { content: '\f2c8'; } /* '' */
