--- a/core/templates/timeline/timeline.html
+++ b/core/templates/timeline/timeline.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load cards i18n static thumbnail %}
+{% load cards i18n static %}
 
 {% block title %}{% trans "Timeline" %}{% endblock %}
 
