--- a/core/templates/core/child_detail.html
+++ b/core/templates/core/child_detail.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load i18n static thumbnail duration %}
+{% load duration i18n imagekit static %}
 
 {% block title %}{{ object }}{% endblock %}
 
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 pb-3 text-center">
                 {% if object.picture %}
-                    {% thumbnail object.picture 150x150 upscale crop as thumb %}
+                    {% thumbnail '150x150' object.picture as thumb %}
                     <img src="{{ thumb.url }}" class="child-photo img-fluid rounded-circle" />
                 {% else %}
                     <img src="{% static 'babybuddy/img/core/child-placeholder.png' %}" class="child-photo img-fluid rounded-circle" />
