--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'babybuddy/page.html' %}
-{% load cards i18n static thumbnail %}
+{% load cards i18n imagekit static %}
 
 {% block title %}{% trans "Dashboard" %}{% endblock %}
 
@@ -19,7 +19,7 @@
                     <div class="card">
                         <a class="text-center" href="{% url 'core:child' object.slug %}">
                             {% if object.picture %}
-                                {% thumbnail object.picture 300x300 upscale crop as thumb %}
+                                {% thumbnail '300x300' object.picture as thumb %}
                                 <img src="{{ thumb.url }}" class="child-photo img-fluid" />
                             {% else %}
                                 <img src="{% static 'babybuddy/img/core/child-placeholder.png' %}" class="child-photo img-fluid" />
